--- a/configs/config.ini
+++ b/configs/config.ini
@@ -12,3 +12,7 @@ url = https://so.gushiwen.cn/user/login.aspx?from=http://so.gushiwen.cn/user/col
 
 [log]
 debug = True
+
+[report]
+title = '古诗文测试报告'
+environment = 'sc'
