'修改test函数名称写法'

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -8,7 +8,7 @@ test = true
 
 [base]
 browser_type = chrome
-url = https://so.gushiwen.cn/user/login.aspx?from=http://so.gushiwen.cn/user/collect.aspx
+url = http://localhost:8080/#/
 
 [log]
 debug = True
